# numerical_analysis

./: BasicDefine.h  CMakeLists.txt
1.绪论/: CMakeLists.txt  chapter1.cpp  八皇后问题.cpp  八皇后问题.h  求方程根之二分法.cpp  求方程根之二分法.h
